<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
	
	<TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/bemvindo1"
    	android:textSize="20sp"
    	android:gravity="center"
    	android:paddingBottom="10dp">
    </TextView>
    
    
    <TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/conectar_usuario"
    	android:textSize="16sp"
    	android:gravity="center">
    </TextView>
    <EditText  
		android:layout_gravity="center"
		android:layout_width="200dp"
    	android:layout_height="wrap_content"
    	android:id="@+edt/conectar_usuario">
    </EditText>
    <TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/conectar_senha"
    	android:textSize="16sp"
    	android:gravity="center"
    	android:paddingBottom="10dp">
    </TextView>
    <EditText  
    	android:password="true"
		android:layout_gravity="center"
		android:layout_width="200dp"
    	android:layout_height="wrap_content"
    	android:id="@+edt/conectar_senha">
    </EditText>
	<Button 
		android:layout_gravity="center"
		android:text="Conectar" 
		android:id="@+btn/connect" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</Button>  
    
    
    <Button
    	android:layout_marginTop="35dp"
    	android:layout_gravity="center"
    	android:text="@string/cadastrar_btn"
    	android:id="@+btn/cadastro"
    	android:layout_height="wrap_content" android:layout_width="120dp">
    </Button>
    
	  
</LinearLayout>
